added flowchart to executive summary

--- a/include/00-executive.tex
+++ b/include/00-executive.tex
@@ -53,8 +53,10 @@ in one step.
 The analysis strategy is shown in the flowchart of Fig.~\ref{eflow}.
 
 \begin{figure}[htb]
-\caption{Analysis top-level flowchart.}
-\label{eflow}
+\centering
+\includegraphics[width=0.75\textwidth]{flowcharts/QGDijet-FlowChart-30March}
+\caption{Analysis top-level flowchart.
+\label{eflow}}
 \end{figure}
 
 The main kinematic variable used to determine the control versus
