--- a/include/04-QGselection.tex
+++ b/include/04-QGselection.tex
@@ -1,6 +1,6 @@
 If the resonant data sample can be divided based on the type of
 parton that initiated the jets, the sensitivity of the search for some
-rescounaces could be increased. 
+resonances could be increased. 
 The fraction of events as a function of  
 the dijet mass from QCD  simulated with a  \textsc{Pythia~8.186}~\cite{pythia8} and the leading-order NNPDF2.3~\cite{Ball:2012cx} 
 parton distribution functions (PDFs) is shown in Fig.~\ref{fig:quarkgluonfraction}. 
@@ -11,19 +11,20 @@ In this note we present the analysis for the whole combined 2015 and
 2016 $\sqrt{s} = 13$~\TeV\xspace dataset using quark 
 and gluon tagging  based on charged-particle constituent multiplicity.
 
-\todo[inline]{Update Fig 1 with dijet fractions nicer plot...}
+
 \begin{figure}[htb]
  \centering
-\includegraphics[width=0.75\textwidth]{figures/introduction/truthCompositionRatio.pdf}
+\includegraphics[width=0.75\textwidth]{figures/tagging/Fractions_QCD.pdf}
 \caption{The fraction of dijet events that are initiated by quark-quark events (blue), quark-gluon 
 events (green) and gluon-gluon events (red) in simulated data.  \label{fig:quarkgluonfraction}}
 \end{figure}
 
-It has been shown that the number of charged particles with transverse
+It has been shown~\cite{ATL-PHYS-PUB-2017-009}  that the number of charged particles with transverse
 momentum (\pT ) above 500\,MeV, \ntrk, associated with a jet can be used
 to select samples which have an increased fraction of jets produced by
-quarks (or gluons). Samples with enhanced fractions of quark or gluon
-initiated jets can be created by using a selection based on the \ntrk\
+quarks (or gluons) 
+%Samples with enhanced fractions of quark or gluon
+%initiated jets can be created by using a selection based on the \ntrk\
 as shown in Fig.~\ref{fig:jet_pt_quark_gluon}.
 Ref.~\cite{ATL-PHYS-PUB-2017-009} also shows that the \Pythia8
 generator~\cite{pythia8} using the A14 tune~\cite{A14tune} is in a good
@@ -49,51 +50,64 @@ enriched quark-initiated jet sample was chosen so that each \pT\ bin had
 dijet sample would lead to discontinuities in the mass spectrum that
 would present difficulties to a resonance search. 
 
-Using a selection criteria that is a linear function of the \( \ln \pT \) 
-results in a smooth mass distribution and can be chosen to produce a uniform 
-selection efficiency.  A jet is classed as being quark-initiated if \ntrk is less than
-the threshold \nq and a gluon-initiated if \ntrk is greater than the threshold \ngluon  
+Using a selection criteria that is a linear function of the \( \ln(\pT) \) 
+results in a smooth mass distribution and can be chosen to produce a  
+selection efficiency that is approximately uniform. 
+A jet is classed as being more likely to be quark-initiated if \ntrk is less than
+the threshold \nq and a more likely to be gluon-initiated if \ntrk is 
+greater than the threshold \ngluon  
 \begin{align}
 \ntrk & \le \nq \; \mbox{quark-initiated sample} \label{eq:QGselect} \\
 \ntrk	  & \ge \ngluon \; \mbox{gluon-initiated sample} \nonumber
 \end{align}
 where   
 \begin{equation}
-n_{\mathrm{q(g)}} = {m \ln(\pT) + c}  \label{eq:nqg2}
+n_{\mathrm{q(g)}} = {c + m \ln(\pT)}  \label{eq:nqg2}
 \end{equation}
 where $m$ and $c$ are constants chosen to provide suitable subsamples.
 
 The constants $m$ and $c$ are found by finding the value of \ntrk\ 
 that corresponds to a given efficiency for truth quark and gluon jets in 
-\pT\ bins and fitting the results. The jet \pT\ bin edges are chosen to be 
-400, 500, 650, 800, 1000, 1200, 1500, 2000, 3000, 6000\,\GeV. An example of the \ntrk cumulative 
-distribution for truth quark and gluon jets satisfying $800 < \pT < 1000\,\GeV$ is shown in
+\pT\ bins and fitting the results. For each \pT\ bin the number of tracks 
+closest to the chosen selection efficiency is found. Since this is an integer 
+number of tracks and does and does not correspond exactly to the selection efficiency 
+a correction is applied by estimating the fractional number of tracks that corresponds 
+to the selection  efficiency  by carrying out a linear interpolation between the efficiencies 
+for the selected bin and its nearest neighbour. The uncertainty on this value is then estimated using 
+binomial uncertainties. 
+
+
+The jet \pT\ bin edges are chosen to be 
+480, 500, 520, 540, 560, 580, 600, 625, 650, 700, 750, 800, 900, 1000, 1400, 
+1600, 1800, 2000, 2500, 3000, 3500, 4000, 5000, 6000\,\GeV. An example of the \ntrk cumulative 
+distribution for truth quark and gluon jets satisfying $800 < \pT < 900\,\GeV$ is shown in
 Fig.~\ref{fig:ntrk_cumulative}.
 
 
 \begin{figure}[htb]
  \centering
-\includegraphics[width=0.75\textwidth]{figures/tagging/Cumulative_ntrk_distribution_4_800_1000GeV.pdf}
+\includegraphics[width=0.75\textwidth]{figures/tagging/Cumulative_ntrk_distribution_12_800_900GeV.pdf}
 \caption{The cumulative distribution of \ntrk\ for truth quark (blue) and gluon (red) initiated jets 
-satisfying $800 < \pT < 1000\,\GeV$.  \label{fig:ntrk_cumulative}}
+satisfying $800 < \pT < 900\,\GeV$.  \label{fig:ntrk_cumulative}}
 \end{figure}
 
 
 The constants for Eq.~\ref{eq:nqg2} are found for quark and gluon selection efficiencies from 
 65\% to 95\% in 5\% steps. The plot of the value of \ntrk\ that satisfies the selection efficiencies 
-of 70 and 80\% are shown in Fig.~\ref{fig:qg_selection_curves} along with the best fit using Eq.~\ref{eq:nqg2}.
+of 70, 75 and 80\% are shown in Fig.~\ref{fig:qg_selection_curves} along with the best fit using Eq.~\ref{eq:nqg2}.
 The values of the constants for both quark and gluon selections are summarised in 
-Tables~\ref{table:truthQuarkSelectionEfficiencies} and \ref{table:truthGluonSelectionEfficiencies}.
+Tables~\ref{table:truthQuarkSelectionEfficiencies} and \ref{table:truthGluonSelectionEfficiencies}. 
+The fit for a selection efficiency of 75\% has a $\chi^2$ of $33.5$ (quark-selection) and $2.6$ 
+(gluon-selection) for 21 degrees of freedom. 
 
-\begin{figure}[htb]
- \centering
-  \subfigure[] {\includegraphics[width=0.495\textwidth]{figures/tagging/quark_selection_6}}
-  \subfigure[] {\includegraphics[width=0.495\textwidth]{figures/tagging/quark_selection_4}}
+The value of \ntrk\ that satisfies the selection efficiency plateaus above 4000\,\GeV indicating a possible saturation effect. As a cross check the data is fitted to an alternative fit function 
+\begin{equation}
+n_{\mathrm{q(g)}} = {c + m \ln(\pT) + n \sqrt{\ln(\pT)}}. \label{eq:nqg3}
+\end{equation}
+This improves the $\chi^2$ of the fit for a selection efficiency of 75\% for quark-selection from
+$33.5$ to $25.1$ and for gluon-selection from $2.6$ to $1.6$.  The improved fit is shown in Fig.~\ref{fig:qg_selection_curves2}.
 
-\caption{ The values of \ntrk\ for (a) 70\% and (b) 80\% quark (blue) and gluon (red) 
-selection efficiencies in each \pT\ bin along with the best fit to Eq.~\ref{eq:nqg2}.
- \label{fig:qg_selection_curves}}
-\end{figure}
+\clearpage
 
 
 \begin{table}[h]
@@ -106,13 +120,13 @@ selection efficiencies in each \pT\ bin along with the best fit to Eq.~\ref{eq:n
 	\toprule
 \multicolumn{1}{c}{Truth-$q$ selection efficiency}   & \multicolumn{1}{c}{Truth-$g$ selection efficiency} &  \multicolumn{1}{c}{$c$}  &  \multicolumn{1}{c}{$m$} \\
 \midrule 
-0.95 & 0.73 & -20.0 & 7.7 \\
-0.90 & 0.57 & -15.9 & 6.5 \\
-0.85 & 0.45 & -13.1 & 5.6 \\
-0.80 & 0.36 & -11.1 & 5.1 \\
-0.75 & 0.28 & -9.1  & 4.5 \\
-0.70 & 0.22 & -6.5  & 3.9 \\
-0.65 & 0.18 & -4.4  & 3.5 \\
+0.95 & 0.732 & -27.568 & 8.789 \\
+0.90 & 0.563 & -21.518 & 7.269 \\
+0.85 & 0.447 & -17.646 & 6.304 \\
+0.80 & 0.350 & -14.956 & 5.610 \\
+0.75 & 0.278 & -12.600 & 5.022 \\
+0.70 & 0.221 & -10.691 & 4.536 \\
+0.65 & 0.174 & -8.990 & 4.105 \\
 \bottomrule
 \end{tabular}
 \end{table}
@@ -127,17 +141,45 @@ selection efficiencies in each \pT\ bin along with the best fit to Eq.~\ref{eq:n
 	\toprule
 \multicolumn{1}{c}{Truth-$g$ selection efficiency}   & \multicolumn{1}{c}{Truth-$q$ selection efficiency} &  \multicolumn{1}{c}{$c$}  &  \multicolumn{1}{c}{$m$} \\
 \midrule 
-0.95 & 0.59 & -3.9 & 2.7 \\
-0.90 & 0.46 & -4.3 & 3.1 \\
-0.85 & 0.39 & -5.4 & 3.5 \\
-0.80 & 0.31 & -5.1 & 3.7 \\
-0.75 & 0.27 & -7.3 & 4.2 \\
-0.70 & 0.23 & -8.9 & 4.6 \\
-0.65 & 0.20 & -8.0 & 4.6\\
+ 0.95 & 0.586 & -7.541 & 3.233 \\
+0.90 & 0.456 & -8.980 & 3.779 \\
+0.85 & 0.377 & -10.419 & 4.230 \\
+0.80 & 0.320 & -11.964 & 4.659 \\
+0.75 & 0.274 & -13.376 & 5.047 \\
+0.70 & 0.234 & -14.937 & 5.446 \\
+0.65 & 0.202 & -16.466 & 5.834 \\
 \bottomrule
 \end{tabular}
 \end{table}
 
+
+\begin{figure}[p]
+ \centering
+  \subfigure[] {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_selection_errors_6}}
+  \subfigure[] {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_selection_errors_5}}
+  \subfigure[] {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_selection_errors_4}}
+
+\caption{ The values of \ntrk\ for (a) 70\%,  (b) 75\%  and (c) 80\% quark (blue) and gluon (red) 
+selection efficiencies in each \pT\ bin along with the best fit to Eq.~\ref{eq:nqg2}.
+ \label{fig:qg_selection_curves2}}
+\end{figure}
+
+\begin{figure}[p]
+ \centering
+  %\subfigure[] {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_selection_errors_6}}
+ {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_newFit_selection_errors_5}}
+  %\subfigure[] {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_selection_errors_4}}
+
+\caption{ The values of \ntrk\ for  75\%  quark (blue) and gluon (red) 
+selection efficiencies in each \pT\ bin along with the best fit to Eq.~\ref{eq:nqg3}.
+ \label{fig:qg_selection_curves}}
+\end{figure}
+
+
+
+
+
+\clearpage
 
 \subsection{Expected Signal Significance}
 \label{sec:ExpectedSig}
