--- a/include/04-QGselection.tex
+++ b/include/04-QGselection.tex
@@ -1,3 +1,6 @@
+
+
+
 If the resonant data sample can be divided based on the type of
 parton that initiated the jets, the sensitivity of the search for some
 resonances could be increased. 
@@ -44,142 +47,6 @@ agreement with the distribution of \ntrk\ found in data.
  from Ref.~\cite{ATL-PHYS-PUB-2017-009}. \label{fig:jet_pt_quark_gluon}}
 \end{figure}
 
-In Ref.~\cite{ATL-PHYS-PUB-2017-009}  the selection criteria for  an
-enriched quark-initiated jet sample was chosen so that each \pT\ bin had
-60\% quark-initiated purity. Applying this criteria to the high mass
-dijet sample would lead to discontinuities in the mass spectrum that
-would present difficulties to a resonance search. 
-
-Using a selection criteria that is a linear function of the \( \ln(\pT) \) 
-results in a smooth mass distribution and can be chosen to produce a  
-selection efficiency that is approximately uniform. 
-A jet is classed as being more likely to be quark-initiated if \ntrk is less than
-the threshold \nq and a more likely to be gluon-initiated if \ntrk is 
-greater than the threshold \ngluon  
-\begin{align}
-\ntrk & \le \nq \; \mbox{quark-initiated sample} \label{eq:QGselect} \\
-\ntrk	  & \ge \ngluon \; \mbox{gluon-initiated sample} \nonumber
-\end{align}
-where   
-\begin{equation}
-n_{\mathrm{q(g)}} = {c + m \ln(\pT)}  \label{eq:nqg2}
-\end{equation}
-where $m$ and $c$ are constants chosen to provide suitable subsamples.
-
-The constants $m$ and $c$ are found by finding the value of \ntrk\ 
-that corresponds to a given efficiency for truth quark and gluon jets in 
-\pT\ bins and fitting the results. For each \pT\ bin the number of tracks 
-closest to the chosen selection efficiency is found. Since this is an integer 
-number of tracks and does and does not correspond exactly to the selection efficiency 
-a correction is applied by estimating the fractional number of tracks that corresponds 
-to the selection  efficiency  by carrying out a linear interpolation between the efficiencies 
-for the selected bin and its nearest neighbour. The uncertainty on this value is then estimated using 
-binomial uncertainties. 
-
-
-The jet \pT\ bin edges are chosen to be 
-480, 500, 520, 540, 560, 580, 600, 625, 650, 700, 750, 800, 900, 1000, 1400, 
-1600, 1800, 2000, 2500, 3000, 3500, 4000, 5000, 6000\,\GeV. An example of the \ntrk cumulative 
-distribution for truth quark and gluon jets satisfying $800 < \pT < 900\,\GeV$ is shown in
-Fig.~\ref{fig:ntrk_cumulative}.
-
-
-\begin{figure}[htb]
- \centering
-\includegraphics[width=0.75\textwidth]{figures/tagging/Cumulative_ntrk_distribution_12_800_900GeV.pdf}
-\caption{The cumulative distribution of \ntrk\ for truth quark (blue) and gluon (red) initiated jets 
-satisfying $800 < \pT < 900\,\GeV$.  \label{fig:ntrk_cumulative}}
-\end{figure}
-
-
-The constants for Eq.~\ref{eq:nqg2} are found for quark and gluon selection efficiencies from 
-65\% to 95\% in 5\% steps. The plot of the value of \ntrk\ that satisfies the selection efficiencies 
-of 70, 75 and 80\% are shown in Fig.~\ref{fig:qg_selection_curves} along with the best fit using Eq.~\ref{eq:nqg2}.
-The values of the constants for both quark and gluon selections are summarised in 
-Tables~\ref{table:truthQuarkSelectionEfficiencies} and \ref{table:truthGluonSelectionEfficiencies}. 
-The fit for a selection efficiency of 75\% has a $\chi^2$ of $33.5$ (quark-selection) and $2.6$ 
-(gluon-selection) for 21 degrees of freedom. 
-
-The value of \ntrk\ that satisfies the selection efficiency plateaus above 4000\,\GeV indicating a possible saturation effect. As a cross check the data is fitted to an alternative fit function 
-\begin{equation}
-n_{\mathrm{q(g)}} = {c + m \ln(\pT) + n \sqrt{\ln(\pT)}}. \label{eq:nqg3}
-\end{equation}
-This improves the $\chi^2$ of the fit for a selection efficiency of 75\% for quark-selection from
-$33.5$ to $25.1$ and for gluon-selection from $2.6$ to $1.6$.  The improved fit is shown in Fig.~\ref{fig:qg_selection_curves2}.
-
-\clearpage
-
-
-\begin{table}[h]
-	\centering 
-		\caption{ Values of constants $m$ and $c$ from Eq.~\ref{eq:nqg2} such that $ \ntrk  \le \nq $ 
-		for truth quark jets for a range of efficiencies  from 65 to 95\%. 
-		\label{table:truthQuarkSelectionEfficiencies}
-		}
-	\begin{tabular}{SSSS}
-	\toprule
-\multicolumn{1}{c}{Truth-$q$ selection efficiency}   & \multicolumn{1}{c}{Truth-$g$ selection efficiency} &  \multicolumn{1}{c}{$c$}  &  \multicolumn{1}{c}{$m$} \\
-\midrule 
-0.95 & 0.732 & -27.568 & 8.789 \\
-0.90 & 0.563 & -21.518 & 7.269 \\
-0.85 & 0.447 & -17.646 & 6.304 \\
-0.80 & 0.350 & -14.956 & 5.610 \\
-0.75 & 0.278 & -12.600 & 5.022 \\
-0.70 & 0.221 & -10.691 & 4.536 \\
-0.65 & 0.174 & -8.990 & 4.105 \\
-\bottomrule
-\end{tabular}
-\end{table}
-
-\begin{table}[h]
-	\centering 
-		\caption{ Values of constants $m$ and $c$ from Eq.~\ref{eq:nqg2} such that $ \ntrk  \ge \ngluon $ 
-		for truth quark jets for a range of efficiencies  from 65 to 95\%. 
-		\label{table:truthGluonSelectionEfficiencies}
-		}
-	\begin{tabular}{SSSS}
-	\toprule
-\multicolumn{1}{c}{Truth-$g$ selection efficiency}   & \multicolumn{1}{c}{Truth-$q$ selection efficiency} &  \multicolumn{1}{c}{$c$}  &  \multicolumn{1}{c}{$m$} \\
-\midrule 
- 0.95 & 0.586 & -7.541 & 3.233 \\
-0.90 & 0.456 & -8.980 & 3.779 \\
-0.85 & 0.377 & -10.419 & 4.230 \\
-0.80 & 0.320 & -11.964 & 4.659 \\
-0.75 & 0.274 & -13.376 & 5.047 \\
-0.70 & 0.234 & -14.937 & 5.446 \\
-0.65 & 0.202 & -16.466 & 5.834 \\
-\bottomrule
-\end{tabular}
-\end{table}
-
-
-\begin{figure}[p]
- \centering
-  \subfigure[] {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_selection_errors_6}}
-  \subfigure[] {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_selection_errors_5}}
-  \subfigure[] {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_selection_errors_4}}
-
-\caption{ The values of \ntrk\ for (a) 70\%,  (b) 75\%  and (c) 80\% quark (blue) and gluon (red) 
-selection efficiencies in each \pT\ bin along with the best fit to Eq.~\ref{eq:nqg2}.
- \label{fig:qg_selection_curves2}}
-\end{figure}
-
-\begin{figure}[p]
- \centering
-  %\subfigure[] {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_selection_errors_6}}
- {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_newFit_selection_errors_5}}
-  %\subfigure[] {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_selection_errors_4}}
-
-\caption{ The values of \ntrk\ for  75\%  quark (blue) and gluon (red) 
-selection efficiencies in each \pT\ bin along with the best fit to Eq.~\ref{eq:nqg3}.
- \label{fig:qg_selection_curves}}
-\end{figure}
-
-
-
-
-
-\clearpage
 
 \subsection{Expected Signal Significance}
 \label{sec:ExpectedSig}
@@ -285,83 +152,220 @@ for $\epsilon_{gG}$ ranging from 30 to 90\% compared to the significance calcula
   \label{fig:QuarkGluonSignalSignificance}}
 \end{figure}
 
+\clearpage
 
-%\begin{equation}
-%S = N_S \sum_i{ \dfrac{ f_{{qq}_i}\epsilon_{qG}^2 + f_{{qg}_i}\epsilon_{qG}\epsilon_{gG} + f_{{gg}_i}\epsilon_{gG}^2  } {\sqrt{ B_{{qq}_i}\epsilon_{qG}^2 + B_{{qg}_i}\epsilon_{qG}\epsilon_{gG} + B_{{gg}_i}\epsilon_{gG}^2  }}}
-%\end{equation}
-%
-%
-%
-%Two alternative
-%selection criteria have been investigated, one based on that used in
-%Ref.~\cite{ATL-PHYS-PUB-2017-009} and a simple linear alternative. A jet
-%is classed as being quark-initiated if \ntrk is less than the threshold
-%\nqg\ (Eq.~\ref{eq:QGselect}):
 
-%These selection criteria are applied to the two leading jets to separate dijet events into three samples:
-%where both jets are more likely to be quark-initiated, \QQ,  where both jets are more likely to
-%be gluon-initiated, \GG, and where we have one of each, \QG.
-%Simulated background events are separated into sub-samples based on the selection criteria given in
-%Eqs.~\ref{eq:nqg1} and \ref{eq:nqg2} and are shown in Fig.~\ref{fig:pythia_qg_selection}. It is clear that
-%the selection using Eq.~\ref{eq:nqg1} (Fig.~\ref{fig:pythia_qg_selection} a) produces more complex background shapes
-%than those Eq.~\ref{eq:nqg2} (Fig.~\ref{fig:pythia_qg_selection} b). Since the selection using  Eq.~\ref{eq:nqg2} will
-%be much easier to fit it will be used for initial toy-MC studies of limit setting. Alternative selections using Eq.~\ref{eq:nqg2} are produced for comparison, "selection 1" with m = 0.02, c = 0, and "selection 4" with m = 0.01, c = 15.
+\subsection{Selection Criteria}
 
-%
-%
-%Figure~\ref{fig:QG_qstar_4tev} shows the selection applied to the mass distribution of a 4\,TeV \qstar . The  
-%\QQ sample is more peaked and has a smaller tail than the \QG\ distribution which has a similar shape to the complete signal. The \GG\ sample of high multiplicity jets has a very small peak and is dominated by the tail.
-%
-%\begin{figure}[htb]
-% \centering
-%\includegraphics[width=0.75\textwidth]{figures/tagging/QG_qstar_4tev.pdf}
-%\caption{Simulated 4\,TeV \qstar\ sample seperated into \QQ\ (blue) , \QG\ (green) and \GG\ (red) 
-%sub-samples.  \label{fig:QG_qstar_4tev}}
-%\end{figure}
-%
-%\clearpage
-%\subsection{Signal Fractions Quark-Gluon selection}
-%
-%The fraction of \qstar\ signal events is measured for masses from 1\,TeV to 7.0\,TeV and are given in Table~\ref{table:qstar_fractions}. The low fraction of \QQ\ events at masses from 1 to 3\,TeV suggest that
-%further optimisation of the selection criteria are required.  
-%
-%\begin{table}[h]
-%	\centering 
-%		\caption{The fraction of \qstar\ MC events in the \QQ, \QG, and \GG\ sub-samples for various masses. 
-%		\label{table:qstar_fractions}}
-%	\begin{tabular}{SSSS}
-%	\toprule
-%\qstar\ Mass (TeV) & \multicolumn{1}{c}{\QQ\ Fraction} &  \multicolumn{1}{c}{\QG\ Fraction}  &  \multicolumn{1}{c}{\GG\ Fraction} \\
-%\midrule 
-%1.0	&	0.06 &	0.31 &	0.63\\
-%2.0	&	0.04 &	0.37 &	0.59\\
-%2.5	&	0.09 &	0.45 & 	0.46\\
-%3.0	&	0.15 &	0.51 &	0.35\\
-%3.5	&	0.22 &	0.53 &	0.25\\
-%4.0	&	0.30 &	0.51 &	0.19\\
-%4.5	&	0.37 &	0.48 &	0.15\\
-%5.0	&	0.44 &	0.44 &	0.12\\
-%5.5	&	0.49 &	0.41 &	0.10\\
-%6.0	&	0.53 &	0.37 &	0.09\\
-%6.5	&	0.56 &	0.35 &	0.09\\
-%7.0	&	0.57 &	0.33 &	0.10\\
-%\bottomrule
-%\end{tabular}
-%\end{table}
-%
-%
-%\begin{figure}[htb]
-% \centering
-%\includegraphics[width=0.75\textwidth]{figures/tagging/QStarEfficincies.pdf}
-%\caption{The fraction of \qstar\ MC events in the \QQ, \QG, and \GG\ sub-samples for various masses.   \label{fig:QStarEfficincies}}
-%\end{figure}
-%
-%
-%
-%\subsection{Signal Morphing with Quark-Gluon selection}
-%
-%Signal morphing (Sec.\ref{sec:SwiftMorphing}) is applied to the \qstar\ signal subsamples. The MC signal 
-%sub-samples for \QQ\ and \QG\ are fit to a Gaussian + reverse Landau function, a parameterization that has 
-%one normalization  and five shape parameters. The parameters are interpolated as a function of mass using cubic splines.
-%%\textit{ \color{red} The \GG\ subsamples have not been morphed at this time.} 
-%
+
+In Ref.~\cite{ATL-PHYS-PUB-2017-009}  the selection criteria for  an
+enriched quark-initiated jet sample was chosen so that each \pT\ bin had
+60\% quark-initiated purity. Applying this criteria to the high mass
+dijet sample would lead to discontinuities in the mass spectrum that
+would present difficulties to a resonance search. 
+
+Using a selection criteria that is a linear function of the \( \ln(\pT) \) 
+results in a smooth mass distribution and can be chosen to produce a  
+selection efficiency that is approximately uniform. 
+A jet is classed as being more likely to be quark-initiated if \ntrk is less than
+the threshold \nq and a more likely to be gluon-initiated if \ntrk is 
+greater than the threshold \ngluon  
+\begin{align}
+\ntrk & \le \nq \; \mbox{quark-initiated sample} \label{eq:QGselect} \\
+\ntrk	  & \ge \ngluon \; \mbox{gluon-initiated sample} \nonumber
+\end{align}
+where   
+\begin{equation}
+n_{\mathrm{q(g)}} = {c + m \ln(\pT)}  \label{eq:nqg2}
+\end{equation}
+where $m$ and $c$ are constants chosen to provide suitable subsamples.
+
+The constants $m$ and $c$ are found by finding the value of \ntrk\ 
+that corresponds to a given efficiency for truth quark and gluon jets in 
+\pT\ bins and fitting the results. For each \pT\ bin the number of tracks 
+closest to the chosen selection efficiency is found. Since this is an integer 
+number of tracks and does and does not correspond exactly to the selection efficiency 
+a correction is applied by estimating the fractional number of tracks that corresponds 
+to the selection  efficiency  by carrying out a linear interpolation between the efficiencies 
+for the selected bin and its nearest neighbour. The uncertainty on this value is then estimated using 
+binomial uncertainties. 
+
+
+The jet \pT\ bin edges are chosen to be 
+480, 500, 520, 540, 560, 580, 600, 625, 650, 700, 750, 800, 900, 1000, 1400, 
+1600, 1800, 2000, 2500, 3000, 3500, 4000, 5000, 6000\,\GeV. An example of the \ntrk cumulative 
+distribution for truth quark and gluon jets satisfying $800 < \pT < 900\,\GeV$ is shown in
+Fig.~\ref{fig:ntrk_cumulative}.
+
+
+\begin{figure}[htb]
+ \centering
+\includegraphics[width=0.75\textwidth]{figures/tagging/Cumulative_ntrk_distribution_12_800_900GeV.pdf}
+\caption{The cumulative distribution of \ntrk\ for truth quark (blue) and gluon (red) initiated jets 
+satisfying $800 < \pT < 900\,\GeV$.  \label{fig:ntrk_cumulative}}
+\end{figure}
+
+
+The constants for Eq.~\ref{eq:nqg2} are found for quark and gluon selection efficiencies from 
+65\% to 95\% in 5\% steps. The plot of the value of \ntrk\ that satisfies the selection efficiencies 
+of 70, 75 and 80\% are shown in Fig.~\ref{fig:qg_selection_curves} along with the best fit using Eq.~\ref{eq:nqg2}.
+The values of the constants for both quark and gluon selections are summarised in 
+Tables~\ref{table:truthQuarkSelectionEfficiencies} and \ref{table:truthGluonSelectionEfficiencies}. 
+The fit for a selection efficiency of 75\% has a $\chi^2$ of $33.5$ (quark-selection) and $2.6$ 
+(gluon-selection) for 21 degrees of freedom. 
+
+The value of \ntrk\ that satisfies the selection efficiency plateaus above 4000\,\GeV\ indicating a possible saturation effect. As a cross check the data is fitted to an alternative fit function 
+\begin{equation}
+n_{\mathrm{q(g)}} = {c + m \ln(\pT) + n \sqrt{\ln(\pT)}}. \label{eq:nqg3}
+\end{equation}
+This improves the $\chi^2$ of the fit for a selection efficiency of 75\% for quark-selection from
+$33.5$ to $25.1$ and for gluon-selection from $2.6$ to $1.6$.  The improved fit is shown in Fig.~\ref{fig:qg_selection_curves2} and the values of the constants for both quark and gluon selections 
+are summarised in 
+Tables~\ref{table:truthQuarkSelectionEfficiencies2} and \ref{table:truthGluonSelectionEfficiencies2}. 
+
+\clearpage
+
+
+\begin{table}[h]
+	\centering 
+		\caption{ Values of constants $m$ and $c$ from Eq.~\ref{eq:nqg2} such that $ \ntrk  \le \nq $ 
+		for truth quark jets for a range of efficiencies  from 65 to 95\%. 
+		\label{table:truthQuarkSelectionEfficiencies}
+		}
+	\begin{tabular}{SSSS}
+	\toprule
+\multicolumn{1}{c}{Truth-$q$ selection efficiency}   & \multicolumn{1}{c}{Truth-$g$ selection efficiency} &  \multicolumn{1}{c}{$c$}  &  \multicolumn{1}{c}{$m$} \\
+\midrule 
+0.95 & 0.732 & -27.568 & 8.789 \\
+0.90 & 0.563 & -21.518 & 7.269 \\
+0.85 & 0.447 & -17.646 & 6.304 \\
+0.80 & 0.350 & -14.956 & 5.610 \\
+0.75 & 0.278 & -12.600 & 5.022 \\
+0.70 & 0.221 & -10.691 & 4.536 \\
+0.65 & 0.174 & -8.990 & 4.105 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\begin{table}[h]
+	\centering 
+		\caption{ Values of constants $m$ and $c$ from Eq.~\ref{eq:nqg2} such that $ \ntrk  \ge \ngluon $ 
+		for truth quark jets for a range of efficiencies  from 65 to 95\%. 
+		\label{table:truthGluonSelectionEfficiencies}
+		}
+	\begin{tabular}{SSSS}
+	\toprule
+\multicolumn{1}{c}{Truth-$g$ selection efficiency}   & \multicolumn{1}{c}{Truth-$q$ selection efficiency} &  \multicolumn{1}{c}{$c$}  &  \multicolumn{1}{c}{$m$} \\
+\midrule 
+ 0.95 & 0.586 & -7.541 & 3.233 \\
+0.90 & 0.456 & -8.980 & 3.779 \\
+0.85 & 0.377 & -10.419 & 4.230 \\
+0.80 & 0.320 & -11.964 & 4.659 \\
+0.75 & 0.274 & -13.376 & 5.047 \\
+0.70 & 0.234 & -14.937 & 5.446 \\
+0.65 & 0.202 & -16.466 & 5.834 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+
+\begin{table}[h]
+	\centering 
+		\caption{ Values of constants $m$ and $c$ from Eq.~\ref{eq:nqg3} such that $ \ntrk  \le \nq $ 
+		for truth quark jets for a range of efficiencies  from 70 to 80\%. 
+		\label{table:truthQuarkSelectionEfficiencies2}
+		}
+	\begin{tabular}{SSSSS}
+	\toprule
+\multicolumn{1}{c}{Truth-$q$ selection efficiency}   & \multicolumn{1}{c}{Truth-$g$ selection efficiency} &  \multicolumn{1}{c}{$c$}  &  \multicolumn{1}{c}{$m$} &  \multicolumn{1}{c}{$n$} \\
+\midrule 
+0.80 & 0.350 & -139.822 & -11.714 & 93.100 \\
+0.75 & 0.278 & -128.174 & -11.001 & 86.141 \\
+0.70 & 0.221 & -128.255 & -11.755 & 87.604 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+
+\begin{table}[h]
+	\centering 
+		\caption{ Values of constants $m$ and $c$ from Eq.~\ref{eq:nqg3} such that $ \ntrk  \ge \ngluon $ 
+		for truth quark jets for a range of efficiencies  from 70 to 80\%. 
+		\label{table:truthGluonSelectionEfficiencies2}
+		}
+	\begin{tabular}{SSSSS}
+	\toprule
+\multicolumn{1}{c}{Truth-$g$ selection efficiency}   & \multicolumn{1}{c}{Truth-$q$ selection efficiency} &  \multicolumn{1}{c}{$c$}  &  \multicolumn{1}{c}{$m$} &  \multicolumn{1}{c}{$n$}  \\
+\midrule 
+0.80 & 0.320 & -99.796 & -7.839 & 66.301 \\
+0.75 & 0.274 & -99.949 & -7.271 & 65.347 \\
+0.70 & 0.234 & -99.774 & -6.640 & 64.077 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+
+
+
+\begin{figure}[p]
+ \centering
+  \subfigure[] {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_selection_errors_6}}
+  \subfigure[] {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_selection_errors_5}}
+  \subfigure[] {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_selection_errors_4}}
+
+\caption{ The values of \ntrk\ for (a) 70\%,  (b) 75\%  and (c) 80\% quark (blue) and gluon (red) 
+selection efficiencies in each \pT\ bin along with the best fit to Eq.~\ref{eq:nqg2}.
+ \label{fig:qg_selection_curves2}}
+\end{figure}
+
+\begin{figure}[p]
+ \centering
+  \subfigure[] {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_newFit_selection_errors_6}}
+  \subfigure[] {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_newFit_selection_errors_5}}
+  \subfigure[] {\includegraphics[width=0.60\textwidth]{figures/tagging/quark_frac_newFit_selection_errors_4}}
+
+\caption{ The values of \ntrk\ for  (a) 70\%,  (b) 75\%  and (c) 80\% quark  quark (blue) and gluon (red) 
+selection efficiencies in each \pT\ bin along with the best fit to Eq.~\ref{eq:nqg3}.
+ \label{fig:qg_selection_curves}}
+\end{figure}
+
+
+\subsubsection{Signal Selection Efficiencies}
+
+
+The selection criteria for a single jet gluon selection efficiency of 75\% is applied to the \Hprime\ 
+sample described in in section~\ref{sec:hprime} are given in Table~\ref{table:HprimeselctionEfficiency}. If the selection works perfectly the expected selection efficiency for the \Hprime\ sample would be 56.3\% ($0.75^2$). The actual selection efficiencies range between 51.9\% for a 2\,\TeV\ signal to 57.4\% for a 7\,\TeV\ signal. 
+
+
+\begin{table}[h]
+	\centering 
+		\caption{ The signal selection efficiency for a fully simulated \Hprime\ decaying to two gluons with requiring two jets to 
+		pass the 75\% single jet criteria given in Eq.~\ref{eq:nqg3} with constants from 
+		Table~\ref{table:truthGluonSelectionEfficiencies}.  The expected double tagged gluon efficiency is 56.3\%. 
+		\label{table:HprimeselctionEfficiency}
+		}
+	\begin{tabular}{SS}
+	\toprule
+\multicolumn{1}{c}{\Hprime\ Mass (\GeV)}   & \multicolumn{1}{c}{Selection efficiency(\%)} \\
+\midrule 
+2000	&	51.9 \\
+2500	&	53.2 \\
+3000 	&	54.9 \\
+3500	&	55.3 \\
+4000	&	56.4 \\
+4500	&	56.7 \\
+5000	&	56.2 \\
+5500	&	57.2 \\
+6000	&	57.4 \\
+6500	&	57.4 \\
+7000	&	57.4 \\
+\bottomrule
+\end{tabular}
+\end{table}
+
+
+
+
+
+\clearpage
+
