removing unused labels

--- a/ANA-EXOT-2019-32-INT1.tex
+++ b/ANA-EXOT-2019-32-INT1.tex
@@ -96,21 +96,21 @@
 
 %-------------------------------------------------------------------------------
 \section{Introduction}
-\label{sec:intro}
+%\label{sec:intro}.  % uncomment if label used. 
 \input{include/01-introduction.tex}
 \clearpage
 %-------------------------------------------------------------------------------
 
 %-------------------------------------------------------------------------------
 \section{Executive Summary}
-\label{sec:executive}
+%\label{sec:executive}.  % uncomment if label used. 
 \input{include/00-executive.tex}
 \clearpage
 %-------------------------------------------------------------------------------
 
 %-------------------------------------------------------------------------------
 \section{Benchmark Models and Datasets}
-\label{sec:benchmark_signals}
+%\label{sec:benchmark_signals}.  % uncomment if label used. 
 \input{include/02-benchmark_signals.tex}
 \clearpage
 %-------------------------------------------------------------------------------
@@ -123,20 +123,20 @@
 
 %-------------------------------------------------------------------------------
 \section{``Quark-Gluon'' Sample Selection}
-\label{sec:QGselection}
+%\label{sec:QGselection}.  % uncomment if label used. 
 \input{include/04-QGselection.tex}
 \clearpage
 %-------------------------------------------------------------------------------
 
 \section{Sample Optimisation}
-\label{sec:Optimisation}
+%\label{sec:Optimisation} % uncomment if label used. 
 \input{include/05-Optimisation.tex}
 \clearpage
 
 
 
 \section{Statistical Framework}
-\label{sec:statistical_framework}
+%\label{sec:statistical_framework} % uncomment if label used. 
 
 %\section{Background Estimation Strategy}
 %\label{sec:background_estimation}
@@ -152,7 +152,7 @@
 % %%SYSTEMATICS
 %
 \section{Systematic Uncertainties}
-\label{sec:systematic_uncertainties}
+%\label{sec:systematic_uncertainties} % uncomment if label used. 
 %\input{texinclude/07-SystematicUncertainties.tex}
 \input{include/systematics.tex}
 %%-------------------------------------------------------------------------------
@@ -171,7 +171,7 @@
 
 %-------------------------------------------------------------------------------
 \section{``Quark-Gluon'' Resonance Search Sensitivity}
-\label{sec:QGsensitivity}
+%\label{sec:QGsensitivity} % uncomment if label used. 
 \input{include/QGsensitivity.tex}
 %\clearpage
 %-------------------------------------------------------------------------------
@@ -204,10 +204,10 @@
 
 %-------------------------------------------------------------------------------
 \section{Conclusion}
-\label{sec:conclusion}
+%\label{sec:conclusion} % uncomment if label used. 
 %-------------------------------------------------------------------------------
 
-Place your conclusion here.
+%Place your conclusion here.
 
 
 %-------------------------------------------------------------------------------
