--- a/include/02-benchmark_signals.tex
+++ b/include/02-benchmark_signals.tex
@@ -39,7 +39,7 @@ For this analysis, we have simulated SU(3) singlet scalar production and decay u
 
 \clearpage
 \subsubsection{String}
-\label{sec:string}
+%\label{sec:string} % uncomment if label used. 
 
 The quadratically divergent corrections to the Higgs self-energy is a
 well known problem of the Standard Model.
@@ -251,7 +251,7 @@ using NNPDF2.3LO set of PDFs~\cite{Ball:2012cx} and the A3
 tune~\cite{ATL-PHYS-PUB-2016-017} over the original hard-scattering event. 
 
 \subsubsection{Excited quarks}
-\label{sec:qstar}
+%\label{sec:qstar}
 
 \todo[inline]{If doing comparison limits will we use \qstar\ or QBH}
 
@@ -290,7 +290,7 @@ interpolation is not used but drawn to help guide the eye.
 \end{figure}
 
 \subsubsection{Quantum Black Holes}
-\label{sec:QBH}
+%\label{sec:QBH} % uncomment if label used. 
 %\todo{Do QBH decay to quarks or gluons, is there increased sensitivity or not} 
 The LHC should be able to produce QBH under the condition that the
 universe contains sufficiently large extra dimensions \cite{RandallMeade}.
@@ -325,7 +325,7 @@ are listed in Appendix~\ref{section:MCQBHgSamples}. Cross sections and acceptanc
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{comment}
 \subsubsection{\Zprime\ models}
-\label{sec:Zprime}
+%\label{sec:Zprime} % uncomment if label used. 
 
 Searches for dijet resonances play an important role in constraining
 possible interactions between dark matter, or a "dark sector," and the
@@ -349,7 +349,7 @@ The Dark Matter Forum reports models with vector or axial-vector couplings
 between the spin-1 mediator $\Zprime$ and SM and DM fields, with the corresponding interaction Lagrangians:
 
 \begin{align}
-	\label{eq:AV}
+	%\label{eq:AV} % uncomment if label used. 
 	\mathcal{L}_{\mathrm{vector}} &= \gq \sum_{q={u,d,s,c,b,t}}  \Zprime_{\mu} \bar{q}\gamma^{\mu}q + \gDM \Zprime_{\mu} \bar{\chiDM}\gamma^{\mu}\chiDM \\
 	\mathcal{L}_{\mathrm{axial-vector}} &= \gq \sum_{q={u,d,s,c,b,t}}  \Zprime_{\mu} \bar{q}\gamma^{\mu}\gamma^5q + \gDM \Zprime_{\mu} \bar{\chiDM}\gamma^{\mu}\gamma^5\chiDM.
 \end{align}
