--- a/include/04-QGselection.tex
+++ b/include/04-QGselection.tex
@@ -171,7 +171,8 @@ A jet is classed as being more likely to be quark-initiated if \ntrk is less tha
 the threshold \nq and a more likely to be gluon-initiated if \ntrk is 
 greater than the threshold \ngluon  
 \begin{align}
-\ntrk & \le \nq \; \mbox{quark-initiated sample} \label{eq:QGselect} \\
+\ntrk & \le \nq \; \mbox{quark-initiated sample} %\label{eq:QGselect}  % uncomment if label used. 
+\\
 \ntrk	  & \ge \ngluon \; \mbox{gluon-initiated sample} \nonumber
 \end{align}
 where   
