--- a/include/08-LimitTechniques.tex
+++ b/include/08-LimitTechniques.tex
@@ -1,4 +1,4 @@
-\label{sec:limitsetting}
+%\label{sec:limitsetting} % uncomment if label used.
 
 The limit setting phase is performed in case no significant deviations from the
 background-only hypothesis are reported in the search phase. While the search
