--- a/include/cutflow.tex
+++ b/include/cutflow.tex
@@ -79,7 +79,7 @@ Jet $\eta$ < 2.1 & 6890730 & 97.44 & 0.52 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of Data 2016.}
-\label{tab:data2016cutflow}
+%\label{tab:data2016cutflow}
 \end{table}%
 
 \begin{table}[ht]
@@ -118,7 +118,7 @@ Jet $\eta$ < 2.1 & 9270399 & 97.45 & 0.65 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of Data 2017.}
-\label{tab:data2017cutflow}
+%\label{tab:data2017cutflow}
 \end{table}%
 
 \begin{table}[ht]
@@ -268,7 +268,7 @@ Jet $\eta$ < 2.1 & 34050360 & 99.71 & 45.81 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of Pythia QCD MC16d, Raw MC Events.}
-\label{tab:bckgdcutflowMC16dRaw}
+%\label{tab:bckgdcutflowMC16dRaw}
 \end{table}%
 
 \begin{table}[ht]
@@ -396,7 +396,7 @@ Jet $\eta$ < 2.1 & 1.36355e+07 & 97.1142 & 10.3422 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of Pythia QCD MC16d, weighted events.}
-\label{tab:bckgdcutflowMC16dWeighted}
+%\label{tab:bckgdcutflowMC16dWeighted}
 \end{table}
 
 \begin{table}[ht]
@@ -573,7 +573,7 @@ Jet $\eta$ < 2.1 & 10.50 & 99.98 & 63.60 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of String 8 TeV MC16a sample, weighted events.}
-\label{tab:String8MC16a}
+%\label{tab:String8MC16a}
 \end{table}
 
 \begin{table}[ht]
@@ -594,7 +594,7 @@ Jet $\eta$ < 2.1 & 12.90 & 99.96 & 63.87 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of String 8 TeV MC16d sample, weighted events.}
-\label{tab:String8MC16d}
+%\label{tab:String8MC16d}
 \end{table}
 
 \begin{table}[ht]
@@ -615,7 +615,7 @@ Jet $\eta$ < 2.1 & 17.06 & 99.97 & 64.01 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of String 8 TeV MC16e sample, weighted events.}
-\label{tab:String8MC16e}
+%\label{tab:String8MC16e}
 \end{table}
 
 \begin{table}[ht]
@@ -636,7 +636,7 @@ Jet $\eta$ < 2.1 & 2.31 & 99.97 & 63.67 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of String 8.5 TeV MC16a sample, weighted events.}
-\label{tab:String8p5MC16a}
+%\label{tab:String8p5MC16a}
 \end{table}
 
 \begin{table}[ht]
@@ -657,7 +657,7 @@ Jet $\eta$ < 2.1 & 2.83 & 99.99 & 63.89 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of String 8.5 TeV MC16d sample, weighted events.}
-\label{tab:String8p5MC16d}
+%\label{tab:String8p5MC16d}
 \end{table}
 
 \begin{table}[ht]
@@ -678,7 +678,7 @@ Jet $\eta$ < 2.1 & 3.73 & 99.99 & 63.79 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of String 8.5 TeV MC16e sample, weighted events.}
-\label{tab:String8p5MC16e}
+%\label{tab:String8p5MC16e}
 \end{table}
 
 \begin{table}[ht]
@@ -699,7 +699,7 @@ Jet $\eta$ < 2.1 & 0.47 & 99.99 & 64.67 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of String 9 TeV MC16a sample, weighted events.}
-\label{tab:String9MC16a}
+%\label{tab:String9MC16a}
 \end{table}
 
 \begin{table}[ht]
@@ -720,7 +720,7 @@ Jet $\eta$ < 2.1 & 0.57 & 99.97 & 64.53 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of String 9 TeV MC16d sample, weighted events.}
-\label{tab:String9MC16d}
+%\label{tab:String9MC16d}
 \end{table}
 
 \begin{table}[ht]
