--- a/include/qcddijetsamples.tex
+++ b/include/qcddijetsamples.tex
@@ -6,7 +6,7 @@ MC16 campaign consists of three sampels(mc16a, mc16d and mc16e) which are priduc
 \begin{sidewaystable}[htbp]
         \begin{center}
                 \caption{mc16a QCD Dijet Samples.}
-                \label{table: mc16a samples}
+                %\label{table: mc16a samples} % uncomment if label used.
                 \begin{tabular}{c}
 		\hline
 		mc16\_13TeV.364700.Pythia8EvtGen\_A14NNPDF23LO\_jetjet\_JZ0WithSW.deriv.DAOD\_EXOT2.e7142\_s3126\_r9364\_p4006 \\ 
@@ -30,7 +30,7 @@ MC16 campaign consists of three sampels(mc16a, mc16d and mc16e) which are priduc
 \begin{sidewaystable}[htbp]
         \begin{center}
                 \caption{mc16d QCD Dijet Samples.}
-                \label{table: mc16d samples}
+               % \label{table: mc16d samples}
                 \begin{tabular}{c}
 		\hline
 		mc16\_13TeV.364700.Pythia8EvtGen\_A14NNPDF23LO\_jetjet\_JZ0WithSW.deriv.DAOD\_EXOT2.e7142\_s3126\_r10201\_p4006 \\
@@ -54,7 +54,7 @@ MC16 campaign consists of three sampels(mc16a, mc16d and mc16e) which are priduc
 \begin{sidewaystable}[htbp]
         \begin{center}
                 \caption{mc16e QCD Dijet Samples.}
-                \label{table: mc16e samples}
+                %\label{table: mc16e samples}
                 \begin{tabular}{c}
 		\hline
 		mc16\_13TeV.364700.Pythia8EvtGen\_A14NNPDF23LO\_jetjet\_JZ0WithSW.deriv.DAOD\_EXOT2.e7142\_s3126\_r10724\_p4006 \\
