--- a/include/signalmcsamples.tex
+++ b/include/signalmcsamples.tex
@@ -1,8 +1,8 @@
 \section{Monte Carlo Signal Samples}
-\label{section:MCSignalSamples}
+%\label{section:MCSignalSamples} % uncomment if label used.
 
 \subsection{String signal samples}
-\label{section:MCStringSamples}
+%\label{section:MCStringSamples} % uncomment if label used.
 
 The string-resonance samples are generated using the \str version 1.00
 Monte Carlo event
