--- a/include/app-GlobalFitStudies.tex
+++ b/include/app-GlobalFitStudies.tex
@@ -1,7 +1,7 @@
 \section{Global Fit Studies}
-\label{sec:globalFitStudies}
+%\label{sec:globalFitStudies} % uncomment if label used. 
 \subsection{Bin Rescaling}
-\label{subsec:binRescaling:GlobalFitting}
+%\label{subsec:binRescaling:GlobalFitting} % uncomment if label used. 
 The dijet fit functions used are based upon motivation from parton distribution functions $\left(1-\frac{m_{jj}}{\sqrt{S}}\right)^{P_{1}}$ and LO matrix element from QCD dijet MC $\frac{m_{jj}}{\sqrt{S}}^{P_{2}}$ with additional ad-hoc terms determined empirically to account for higher orders \cite{ATL-COM-PHYS-2018-161}, and ensuring that the function is smooth and monotonically decreasing. 
 
 If the underlying data follows this distribution, variable binning will introduce an artificial deviation in the measured data away from this distribution. Shown in Figure \ref{fig:BinningShapeAdjustment} using events selected from the string resonance cuts, is a ratio between the measured data in events per bin basis and the measured data in events / GeV per bin by dividing by bin width, normalized to be equal in the 7904-8055 GeV bin for comparison. It can be seen that the variable binning introduces a change in shape as expected particularly affecting the low $m_{jj}$ region, and as well as this there are noticeable unsmooth jumps in the distribution coming from the raw events per bin case due to requirements of integer bin widths. Due to this change in shape and unsmooth jumps, to reliably fit the dijet fit functions to data it is required to correct for this, either by using non-variable binning for fits or by a bin rescaling procedure:
@@ -27,14 +27,16 @@ Shown in Figure \ref{fig:5ParamGlobalFitBinRescaleComparison} is a comparison fo
 
 \begin{figure}[!htb]
   \centering
-  \subfigure[Fitted events per bin]{ \label{fig:sub15ParamGlobalFitBinRescaleComparison} \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0p8_NoRescalingProcedure.pdf} }
-  \subfigure[Fitted events / GeV per bin via bin rescaling procedure.]{ \label{fig:sub25ParamGlobalFitBinRescaleComparison} \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0p8.pdf} }
+  \subfigure[Fitted events per bin]{ %\label{fig:sub15ParamGlobalFitBinRescaleComparison}  sub15ParamGlobalFitBinRescaleComparison
+  \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0p8_NoRescalingProcedure.pdf} }
+  \subfigure[Fitted events / GeV per bin via bin rescaling procedure.]{ %\label{fig:sub25ParamGlobalFitBinRescaleComparison} % uncomment if label used. 
+  \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalFit_ystar0p8.pdf} } 
   \caption{string resonance cuts inclusive $|y*|<0.8$ data fitted using MINUIT2 with a 5 parameter dijet fit function, both globally fitting the measured data in events per bin and performing the bin rescaling procedure. The measured $\frac{\chi^{2}}{nDoF}$ of the fit is improved via this bin rescaling procedure by a factor of 20 from 1617/80 to 63.4/80.}
   \label{fig:5ParamGlobalFitBinRescaleComparison}
 \end{figure}
 
 \subsection{Fit Statistical Uncertainty}
-\label{subsec:fitStatUnc:GlobalFitting}
+%\label{subsec:fitStatUnc:GlobalFitting} % uncomment if label used. 
 
 To estimate the $1\sigma$ statistical uncertainty upon the fit, a pseudo-experiment method is used, which has been used in many other analyses including the previous dijet analysis \cite{ATL-COM-PHYS-2018-1538}.
 
@@ -54,7 +56,7 @@ The statistical uncertainty on the 5 parameter dijet fit function globally fitte
 \end{figure}
 
 \subsection{Choice of Minimizer}
-\label{subsec:MinimizerChoice:GlobalFitting}
+%\label{subsec:MinimizerChoice:GlobalFitting} % uncomment if label used. 
 The MINUIT2 minimizer is used as standard, the statistical uncertainty of the 5 parameter dijet fit function globally fitted on data with string resonance cuts obtained with MINUIT2 in comparison to MINUIT is shown in Figure \ref{fig:5ParamMINUITComparison}, showing that MINUIT has a statistical uncertainty $ < $ 9\% up to 8 TeV, $\approx$ 3\% larger at 8 TeV than the MINUIT2 case.
 
 \begin{figure}
@@ -66,7 +68,7 @@ The MINUIT2 minimizer is used as standard, the statistical uncertainty of the 5 
 
 
 \subsection{SWiFt Vs Global Fitting}
-\label{subsec:SWiFtVsGlobal:GlobalFitting}
+%\label{subsec:SWiFtVsGlobal:GlobalFitting} % uncomment if label used. 
 
 The statistical uncertainty found on the fit using SWiFt instead of global fitting is shown in Figure \ref{fig:SWiFtStatisticalUncertaintyYstar0.8}, with a statistical uncertainty of $ < $ 44\% up to 8 TeV, $\approx$ 38\% larger at 8 TeV than the global fitting case. Due to this increased statistical uncertainty and also due to the inherent simplicity of global fits allowing easier reinterpretation by theorists, using the global fit rather than SWiFt fit is motivated.
 
@@ -78,7 +80,7 @@ The statistical uncertainty found on the fit using SWiFt instead of global fitti
 \end{figure}
 
 \subsubsection{Bump Hunter}
-\label{subsubsec:BH:GlobalFitting}
+%\label{subsubsec:BH:GlobalFitting} % uncomment if label used. 
 
 The significance per bin was calculated using BumpHunter both using SWiFt and global fitting for string resonance cuts to inclusive $|y*|<0.8$ data in Figure \ref{fig:ystar0.8FullRunBHFits}, the BumpHunter p-value for these is shown in Figure \ref{fig:ystar0.8FullRunBHPvalue}, showing both SWiFt and global fitting produce consistent significance plots and p-values for this region (0.93 vs 0.90 respectively).
 
@@ -94,8 +96,10 @@ This same procedure was performed for each individual year of running (2015,2016
 
 \begin{figure}[!htb]
   \centering
-  \subfigure[SWiFt background fit]{ \label{fig:sub1ystar0.8FullRunBHFits} \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p8_BumpHunterSignifcance.pdf} }
-  \subfigure[Global background fit]{ \label{fig:sub2ystar0.8FullRunBHFits} \includegraphics[trim=35 2 10 30, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p8_BumpHunterSignifcance.pdf} }
+  \subfigure[SWiFt background fit]{ % \label{fig:sub1ystar0.8FullRunBHFits}  % uncomment if label used.
+  \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p8_BumpHunterSignifcance.pdf} }
+  \subfigure[Global background fit]{ % \label{fig:sub2ystar0.8FullRunBHFits}  % uncomment if label used.
+  \includegraphics[trim=35 2 10 30, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p8_BumpHunterSignifcance.pdf} }
   \caption{significance per bin calculated using BumpHunter for string resonance cuts inclusive $|y*|<0.8$ data fitted with a 5 parameter dijet fit function fitted both with SWiFt and globally, showing consistent significance plots between SWiFt and global fitting.}
   \label{fig:ystar0.8FullRunBHFits}
 \end{figure}
@@ -103,8 +107,10 @@ This same procedure was performed for each individual year of running (2015,2016
 
 \begin{figure}[!htb]
   \centering
-  \subfigure[SWiFt background fit]{ \label{fig:sub1ystar0.8FullRunBHPvalue} \includegraphics[trim=0 0 0 20, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p8_BumpHunterPValue.pdf} }
-  \subfigure[Global background fit]{ \label{fig:sub2ystar0.8FullRunBHPvalue} \includegraphics[trim=10 2 35 35, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p8_BumpHunterPValue.pdf} }
+  \subfigure[SWiFt background fit]{ %\label{fig:sub1ystar0.8FullRunBHPvalue} % uncomment if label used.
+  \includegraphics[trim=0 0 0 20, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p8_BumpHunterPValue.pdf} }
+  \subfigure[Global background fit]{ %\label{fig:sub2ystar0.8FullRunBHPvalue} % uncomment if label used.
+  \includegraphics[trim=10 2 35 35, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p8_BumpHunterPValue.pdf} }
   \caption{BumpHunter p-values calculated using BumpHunter for string resonance cuts inclusive $|y*|<0.8$ data fitted with a 5 parameter dijet fit function fitted both with SWiFt and globally, showing consistent p-values between SWiFt and global fitting.}
   \label{fig:ystar0.8FullRunBHPvalue}
 \end{figure}
@@ -113,8 +119,10 @@ This same procedure was performed for each individual year of running (2015,2016
 
 \begin{figure}[!htb]
   \centering
-  \subfigure[SWiFt background fit]{ \label{fig:sub1ystar0.6FullRunBHFits} \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p6_BumpHunterSignifcance.pdf} }
-  \subfigure[Global background fit]{ \label{fig:sub2ystar0.6FullRunBHFits} \includegraphics[trim=35 2 10 30, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p6_BumpHunterSignifcance.pdf} }
+  \subfigure[SWiFt background fit]{ %\label{fig:sub1ystar0.6FullRunBHFits} % uncomment if label used.
+  \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p6_BumpHunterSignifcance.pdf} }
+  \subfigure[Global background fit]{ %\label{fig:sub2ystar0.6FullRunBHFits}  % uncomment if label used.
+  \includegraphics[trim=35 2 10 30, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p6_BumpHunterSignifcance.pdf} }
   \caption{significance per bin calculated using BumpHunter for H' cuts inclusive $|y*|<0.6$ data fitted with a 5 parameter dijet fit function fitted both with SWiFt and globally, showing consistent significance plots between SWiFt and global fitting at low $m_{jj}$, but significantly larger significances are observed in the global fit at high $m_{jj}$.}
   \label{fig:ystar0.6FullRunBHFits}
 \end{figure}
@@ -123,16 +131,20 @@ This same procedure was performed for each individual year of running (2015,2016
 
 \begin{figure}[!htb]
   \centering
-  \subfigure[SWiFt background fit]{ \label{fig:sub1ystar0.6FullRunBHPvalue} \includegraphics[trim=0 0 0 20, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p6_BumpHunterPValue.pdf} }
-  \subfigure[Global background fit]{ \label{fig:sub2ystar0.6FullRunBHPvalue} \includegraphics[trim=10 2 35 35, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p6_BumpHunterPValue.pdf} }
+  \subfigure[SWiFt background fit]{ %\label{fig:sub1ystar0.6FullRunBHPvalue} % uncomment if label used.
+  \includegraphics[trim=0 0 0 20, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamSwiftYStar0p6_BumpHunterPValue.pdf} }
+  \subfigure[Global background fit]{ %\label{fig:sub2ystar0.6FullRunBHPvalue}  % uncomment if label used.
+  \includegraphics[trim=10 2 35 35, clip,width=0.48\textwidth]{figures/app-GlobalFitStudies/5ParamGlobalYStar0p6_BumpHunterPValue.pdf} }
   \caption{BumpHunter p-values calculated using BumpHunter for H' cuts inclusive $|y*|<0.6$ data fitted with a 5 parameter dijet fit function fitted both with SWiFt and globally, showing a large difference between the p-value obtained with SWiFt than with global fitting.}
   \label{fig:ystar0.6FullRunBHPvalue}
 \end{figure}
 
 \begin{figure}[!htb]
   \centering
-  \subfigure[SWiFt background fit]{ \label{fig:sub1ystar0.6IndividualFits} \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/VariousYearsFitsAt1Fb_SWiFtYstar0p6.pdf} }
-  \subfigure[Global background fit]{ \label{fig:sub2ystar0.6IndividualFits} \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/VariousYearsFitsAt1FbYstar0p6.pdf} }
+  \subfigure[SWiFt background fit]{ %\label{fig:sub1ystar0.6IndividualFits} % uncomment if label used.
+  \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/VariousYearsFitsAt1Fb_SWiFtYstar0p6.pdf} }
+  \subfigure[Global background fit]{ %\label{fig:sub2ystar0.6IndividualFits} % uncomment if label used.
+  \includegraphics[width=0.48\textwidth]{figures/app-GlobalFitStudies/VariousYearsFitsAt1FbYstar0p6.pdf} }
   \caption{Background fit for each year of running in both SWiFt and global fitting, normalized to 1 fb$^{-1}$.}
   \label{fig:ystar0.6IndividualFits}
 \end{figure}
