--- a/include/datasamples.tex
+++ b/include/datasamples.tex
@@ -1,5 +1,5 @@
 \section{Data Samples}
-\label{sec:datasample}
+%\label{sec:datasample} % uncomment if label used. 
 
 In this analysis, the full data collected at $\sqrt{s} = 13$ TeV with the ATLAS Detector in 2015 and 2018 are used, corresponding to an integrated luminosity of 139 ~\ifb.
 All datasets have been produced using Athena release 21. 
@@ -14,7 +14,7 @@ All datasets have been produced using Athena release 21.
 \begin{table}[htbp]
         \begin{center}
                 \caption{2015 Data Samples.}
-                \label{table: data samples of 2015}
+                %\label{table: data samples of 2015} % uncomment if label used. 
                 \begin{tabular}{c}
 		\hline
 		data15\_13TeV.periodD.physics\_Main.PhysCont.DAOD\_EXOT2.grp15\_v01\_p4016 \\
@@ -31,7 +31,7 @@ All datasets have been produced using Athena release 21.
 \begin{table}[htbp]
         \begin{center}
                 \caption{2016 Data Samples.}
-                \label{table: data samples of 2016}
+                %\label{table: data samples of 2016} % uncomment if label used. 
                 \begin{tabular}{c}
 		\hline
 		data16\_13TeV.periodA.physics\_Main.PhysCont.DAOD\_EXOT2.grp16\_v01\_p4016 \\
@@ -52,7 +52,7 @@ All datasets have been produced using Athena release 21.
 \begin{table}[htbp]
         \begin{center}
                 \caption{2017 Data Samples.}
-                \label{table: data samples of 2017}
+               %\label{table: data samples of 2017} % uncomment if label used. 
                 \begin{tabular}{c}
 		\hline
 		data17\_13TeV.periodB.physics\_Main.PhysCont.DAOD\_EXOT2.grp17\_v01\_p4016 \\
@@ -71,7 +71,7 @@ All datasets have been produced using Athena release 21.
 \begin{table}[htbp]
         \begin{center}
                 \caption{2018 Data Samples.}
-                \label{table: data samples of 2018}
+                %\label{table: data samples of 2018} % uncomment if label used. 
                 \begin{tabular}{c}
 		\hline
 		data18\_13TeV.periodB.physics\_Main.PhysCont.DAOD\_EXOT2.grp18\_v01\_p4016 \\
