removing unused labels

--- a/include/03-event_selection.tex
+++ b/include/03-event_selection.tex
@@ -6,7 +6,7 @@ described in Section~\ref{sec:base_selection}.
 %for the resonant analysis, tailored to improve the sensitivity, are described in Sections~\ref{sec:res_selection}. 
 
 \subsection{Observables and Kinematic Variables}
-\label{sec:observables}
+%\label{sec:observables}
 In the Standard Model (SM), the main and predominant source of dijet
 events is two-to-two scattering in QCD processes. The search exploits
 two key properties of the background to enhance its sensitivity to new
@@ -36,7 +36,7 @@ sub-leading jet. The value of the \ystar\ cut is optimized to reject
 $t$-channel QCD while admitting the other types of signals.
 
 \subsection{Jet Reconstruction and Calibration}
-\label{sec:jet_reconstruction}
+%\label{sec:jet_reconstruction}
 Jets are reconstructed with the \akt algorithm \cite{Cacciari:2008gp}
 with a distance parameter of 0.4, as implemented in the \textsc{FastJet}
 package~\cite{Cacciari:2011ma}. For these studies, we use jets
@@ -90,7 +90,7 @@ summarized in Table~\ref{tab:jetCalibration}.
 
 
 \subsection{Trigger}
-\label{sec:trigger}
+%\label{sec:trigger}
 The data used in this analysis are collected using the lowest
 unprescaled small-R single-jet trigger.  The naming convention of
 single-jet triggers follows either `Jnnn' for L1 triggers or `jnnn' for
