--- a/include/cutflow.tex
+++ b/include/cutflow.tex
@@ -468,7 +468,7 @@ Jet $\eta$ < 2.1 & 200.58 & 99.95 & 63.85 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of String 7 TeV MC16d sample, weighted events.}
-\label{tab:String7MC16d}
+%\label{tab:String7MC16d}
 \end{table}
 
 \begin{table}[ht]
@@ -489,7 +489,7 @@ Jet $\eta$ < 2.1 & 264.68 & 99.97 & 63.87 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of String 7 TeV MC16e sample, weighted events.}
-\label{tab:String7MC16e}
+%\label{tab:String7MC16e}
 \end{table}
 
 \begin{table}[ht]
@@ -510,7 +510,7 @@ Jet $\eta$ < 2.1 & 43.41 & 99.96 & 64.45 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of String 7.5 TeV MC16a sample, weighted events.}
-\label{tab:String7p5MC16a}
+%\label{tab:String7p5MC16a}
 \end{table}
 
 \begin{table}[ht]
@@ -531,7 +531,7 @@ Jet $\eta$ < 2.1 & 52.73 & 99.99 & 63.98 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of String 7.5 TeV MC16d sample, weighted events.}
-\label{tab:String7p5MC16d}
+%\label{tab:String7p5MC16d}
 \end{table}
 
 \begin{table}[ht]
@@ -552,7 +552,7 @@ Jet $\eta$ < 2.1 & 69.76 & 99.98 & 64.16 \\
 \end{tabular}
 \end{center}
 \caption{Cutflow of String 7.5 TeV MC16e sample, weighted events.}
-\label{tab:String7p5MC16e}
+%\label{tab:String7p5MC16e}
 \end{table}
 
 \begin{table}[ht]
