try to remove eps files to get rid of last errors

--- a/include/02-benchmark_signals.tex
+++ b/include/02-benchmark_signals.tex
@@ -404,7 +404,7 @@ The grid of samples produced in full simulation is shown in Table~\ref{tab:ZPrim
 
  \begin{figure}[!htb]
    \centering
-   \includegraphics[width=0.45\textwidth]{figures/benchmark_signals/Acceptances_AllZPrime.eps}
+   \includegraphics[width=0.45\textwidth]{figures/benchmark_signals/Acceptances_AllZPrime}
    \caption{Acceptance for the \Zprime\ models 
    for 13~\TeV~center-of-mass energies using the full resonance
    analysis selection (Section~\ref{sec:event_selection}).
