--- a/ANA-EXOT-2019-32-INT1.bib
+++ b/ANA-EXOT-2019-32-INT1.bib
@@ -20,7 +20,7 @@
   pages = {150001},
   numpages = {1},
   year = {2016},
-  month = {Apr},
+  month = {4},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.116.150001},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.116.150001}
@@ -362,22 +362,22 @@ SLACcitation   = "%%CITATION = ARXIV:1410.1280;%%"
      howpublished   = "{ATL-PHYS-PUB-2012-003}",
      url       = "http://cds.cern.ch/record/1474107"
 }
-@article{Ball:2012cx,
-      author         = "Ball, Richard D. and others",
-      title          = "{Parton distributions with LHC data}",
-      journal        = "Nucl. Phys.",
-      volume         = "B867",
-      year           = "2013",
-      pages          = "244--289",
-      doi            = "10.1016/j.nuclphysb.2012.10.003",
-      eprint         = "1207.1303",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
-      reportNumber   = "EDINBURGH-2012-08, IFUM-FT-997, FR-PHENO-2012-014,
-                        RWTH-TTK-12-25, CERN-PH-TH-2012-037, SFB-CPP-12-47\,
-                        --CERN-PH-TH-2012-037",
-      SLACcitation   = "%%CITATION = ARXIV:1207.1303;%%"
-}
+%@article{Ball:2012cx,
+%      author         = "Ball, Richard D. and others",
+%      title          = "{Parton distributions with LHC data}",
+%      journal        = "Nucl. Phys.",
+%      volume         = "B867",
+%      year           = "2013",
+%      pages          = "244--289",
+%      doi            = "10.1016/j.nuclphysb.2012.10.003",
+%      eprint         = "1207.1303",
+%      archivePrefix  = "arXiv",
+%      primaryClass   = "hep-ph",
+%      reportNumber   = "EDINBURGH-2012-08, IFUM-FT-997, FR-PHENO-2012-014,
+%                        RWTH-TTK-12-25, CERN-PH-TH-2012-037, SFB-CPP-12-47\,
+%                        --CERN-PH-TH-2012-037",
+%      SLACcitation   = "%%CITATION = ARXIV:1207.1303;%%"
+%}
 
 @inproceedings{Carrazza:2013axa,
       author         = "Carrazza, Stefano and Forte, Stefano and Rojo, Juan",
@@ -778,13 +778,13 @@ d Feng, Wan-Zhe and Goldberg, Haim and Huang, Xing and Lust, Dieter and Stojkovi
                         --FERMILAB-PUB-14-316-CD",
       SLACcitation   = "%%CITATION = ARXIV:1410.3012;%%"
 }
-@Booklet{ATL-PHYS-PUB-2014-021,
-    author         = "{ATLAS Collaboration}",
-    title          = "{ATLAS Pythia~8 tunes to 7~TeV data}",
-    howpublished   = "{ATL-PHYS-PUB-2014-021}",
-    url            = "https://cds.cern.ch/record/1966419",
-    year           = "2014",
-}
+%@Booklet{ATL-PHYS-PUB-2014-021,
+%    author         = "{ATLAS Collaboration}",
+%    title          = "{ATLAS Pythia~8 tunes to 7~TeV data}",
+%    howpublished   = "{ATL-PHYS-PUB-2014-021}",
+%    url            = "https://cds.cern.ch/record/1966419",
+%    year           = "2014",
+%}
 @article{Pumplin:2002vw,
       author         = "Pumplin, J. and Stump, D. R. and Huston, J. and Lai, H.
                         L. and Nadolsky, Pavel M. and Tung, W. K.",
@@ -831,13 +831,13 @@ d Feng, Wan-Zhe and Goldberg, Haim and Huang, Xing and Lust, Dieter and Stojkovi
                         --CERN-PH-TH-2012-037",
       SLACcitation   = "%%CITATION = ARXIV:1207.1303;%%"
 }
-@Booklet{ATL-PHYS-PUB-2016-017,
-    author         = "{ATLAS Collaboration}",
-    title          = "{The Pythia~8 A3 tune description of ATLAS minimum bias and inelastic measurements incorporating the Donnachie--Landshoff diffractive model}",
-    howpublished   = "{ATL-PHYS-PUB-2016-017}",
-    url            = "https://cds.cern.ch/record/2206965",
-    year           = "2016",
-}
+%@Booklet{ATL-PHYS-PUB-2016-017,
+%    author         = "{ATLAS Collaboration}",
+%    title          = "{The Pythia~8 A3 tune description of ATLAS minimum bias and inelastic measurements incorporating the Donnachie--Landshoff diffractive model}",
+%    howpublished   = "{ATL-PHYS-PUB-2016-017}",
+%    url            = "https://cds.cern.ch/record/2206965",
+%    year           = "2016",
+%}
 @article{Alwall:2006yp,
     author = "Alwall, Johan and others",
     title = "{A Standard format for Les Houches event files}",
@@ -885,7 +885,7 @@ d Feng, Wan-Zhe and Goldberg, Haim and Huang, Xing and Lust, Dieter and Stojkovi
       institution   = "CERN",
       address       = "Geneva",
       number        = "ATL-COM-PHYS-2018-1538",
-      month         = "Nov",
+      month         = "11",
       year          = "2018",
       reportNumber  = "ATL-COM-PHYS-2018-1538",
       url           = "https://cds.cern.ch/record/2646455",
