started wriing framework chapter

--- a/ANA-EXOT-2019-32-INT1.bib
+++ b/ANA-EXOT-2019-32-INT1.bib
@@ -113,7 +113,7 @@
   archivePrefix = "arXiv",
   primaryClass  =  "hep-ex",
   year = {2009},
-  month = {Aug},
+  month = {8},
   doi = "10.1103/PhysRevD.79.112002"
 }
 
@@ -907,5 +907,89 @@ d Feng, Wan-Zhe and Goldberg, Haim and Huang, Xing and Lust, Dieter and Stojkovi
     year           = "2018",
 }
 
+@article{Alitti:1990kw,
+    author = "Alitti, J. and others",
+    collaboration = "UA2",
+    title = "{A Measurement of two jet decays of the $W$ and $Z$ bosons at the CERN $\bar{p} p$ collider}",
+    reportNumber = "CERN-PPE-90-105",
+    doi = "10.1007/BF01570793",
+    journal = "Z. Phys. C",
+    volume = "49",
+    pages = "17--28",
+    year = "1991"
+}
+
+@article{Alitti:1993pn,
+    author = "Alitti, J. and others",
+    collaboration = "UA2",
+    title = "{A Search for new intermediate vector mesons and excited quarks decaying to two jets at the CERN $\bar{p} p$ collider}",
+    reportNumber = "CERN-PPE-93-66",
+    doi = "10.1016/0550-3213(93)90395-6",
+    journal = "Nucl. Phys. B",
+    volume = "400",
+    pages = "3--24",
+    year = "1993"
+}
+
+
+@online{xmlAnaWSBuilder,
+  title    = "XML Analytic Workspace Builder",
+  author   = "Yang, Hongtao",
+  year     = "2021",
+  url      = "https://twiki.cern.ch/twiki/bin/viewauth/AtlasProtected/XmlAnaWSBuilder",
+  urldate = {2021-06-22}
+}
+
+
+@online{quickFit,
+  title    = "quickFit",
+  author   = "Yang, Hongtao",
+  year     = "2021",
+  url      = "https://gitlab.cern.ch/atlas_higgs_combination/software/quickFit",
+  urldate = {2021-06-22}
+}
+
+@misc{gligorov2021avoiding,
+      title={Avoiding biases in binned fits}, 
+      author={V. V. Gligorov and S. Hageboeck and T. Nanut and A. Sciandra and D. Y. Tou},
+      year={2021},
+      eprint={2104.13879},
+      archivePrefix={arXiv},
+      primaryClass={physics.data-an}
+}
+
+
+@online{RooBinSamplingPdf,
+  title    = "RooFit development version with RooBinSamplingPdf",
+  %author   = "Yang, Hongtao",
+  year     = "2021",
+  url      = "https://github.com/root-project/root/releases/tag/v6-23-01-RF-binSampling"
+
+}
+
+% ROOT
+@article{Brun:1997,
+  author = "Rene Brun and Fons Rademakers",
+  title = "ROOT -- An object oriented data analysis framework",
+  journal = "Nucl. Instrum. Meth. A",
+  volume = "389",
+  number = "1",
+  pages = "81 - 86",
+  year = "1997",
+  issn = "0168-9002",
+  doi = "10.1016/S0168-9002(97)00048-X",
+}
+
+% RooFit
+@Booklet{RooFit,
+      author         = "Verkerke, Wouter and Kirkby, David",
+      title          = "{The RooFit toolkit for data modeling}",
+      year           = "2003",
+      eprint         = "physics/0306116",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.data-an",
+}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
