--- a/ANA-EXOT-2019-32-INT1.tex
+++ b/ANA-EXOT-2019-32-INT1.tex
@@ -65,6 +65,7 @@
 \addbibresource{bib/CMS.bib}
 \addbibresource{bib/ConfNotes.bib}
 \addbibresource{bib/PubNotes.bib}
+%\addbibresource{bib/ATLAS-useful.bib}
 
 % Paths for figures - do not forget the / at the end of the directory name.
 \graphicspath{{logos/}{figures/}}
@@ -137,6 +138,8 @@
 
 \section{Statistical Framework}
 %\label{sec:statistical_framework} % uncomment if label used. 
+
+\input{include/06-StatisticalFramework.tex}
 
 %\section{Background Estimation Strategy}
 %\label{sec:background_estimation}
