added appendix for trigger studies

--- a/include/05-Optimisation.tex
+++ b/include/05-Optimisation.tex
@@ -37,23 +37,22 @@ $|\ystar| < 0.6$. Figure \ref{fig: string significance as a function of y* cut} 
 \end{figure}
 
 \subsection{dijet mass turn-on}
-%\label{section: dijet mass turn-on} % uncomment if label used.
+\label{section:dijetmassturn-on} % uncomment if label used.
 
 
 The \mjj\ turn-on is measured using data by comparing events collected with the highest \pT\ 
-trigger with one with a lower \pt\ threshold.  The efficiency for the HLT\_j420 trigger is calculated by comparing to to the 
+trigger with one with a lower \pt\ threshold.  The efficiency for the HLT\_j420 trigger is calculated by comparing to the 
 following triggers in each data taking period: 2015 HLT\_j360, 2016 HLT\_j380, 2017 and 2018 HLT\_mu50. We use a muon trigger 
 2017 and 2018 as HLT\_j420 is the only unprescaled jet trigger available. Since the HLT\_mu50 is available for all running periods 
 a comparison is made for the complete Run~2 data set. 
 A mass cut will be applied to remove events where 
 the trigger efficiency is less than 99.5\%.
 
-
-
 Figure \ref{fig: mass turn-on yStar 0.6} shows the efficiencies as a function of \mjj\ for $|\ystar|<0.6$ in 
 two g-tag regions for both triggers.  The results 
 are summarised for data taking periods in Table~\ref{table:massTurnOns} and shown for the full Run~2 data 
-taking period in Figures \ref{fig: mass turn-on yStar 0.6} and \ref{fig: mass turn-on yStar 0.8}. 
+taking period in Figures \ref{fig: mass turn-on yStar 0.6} and \ref{fig: mass turn-on yStar 0.8}. The detailed results for
+each year are added to the Appendix~\ref{section:triggerturnon}.
 
 
 The \mjj\ mass has been chosend to be slightly above th e value of the plateau ($\geq$99.5\%) and is 1100\,\GeV.
