--- a/include/appendix.tex
+++ b/include/appendix.tex
@@ -18,6 +18,9 @@
 \input{include/cutflow.tex}
 \clearpage
 
+% adding trigger studies
+\input{include/triggerturnon.tex}
+
 % BumpHunter Algorithm
 %\input{include/bumphunter.tex}
 
