updating cutflow tables appendix

--- a/include/cutflow.tex
+++ b/include/cutflow.tex
@@ -350,20 +350,20 @@ The tables ~\ref{tab:bckgdcutflowMC16aWeighted} - ~\ref{tab:bckgdcutflowMC16eWei
 Selection criteria & $N_{events}$ & Relative & Cummulative  \\
  & & percentage & percentage \\
 \hline
-Trigger HLT j420 & 8.49479e+07 &  &  \\
-$|\Delta\phi|$>1. & 8.49294e+07 & 99.9782 & 99.9782 \\
+Trigger HLT j420 & 84942396.76 &  &  \\
+$|\Delta\phi|$>1. & 84923902.82 & 99.98 & 99.98 \\
 \hline\hline
-|y*|<0.6 & 4.44297e+07 & 52.3137 & 52.3023 \\
-$m_{jj}$>1100 GeV & 8.8685e+06 & 19.9607 & 10.4399 \\
-Jet $|\eta|$ < 2.1 & 8.7258e+06 & 98.391 & 10.2719 \\
->=1 gluon tag & 6.41701e+06 & 73.5406 & 7.55406 \\
-2 gluon tag & 1.98737e+06 & 30.9704 & 2.33952 \\
+|y*|<0.6 & 44426861.38 & 52.31 & 52.30 \\
+$m_{jj}$>1100 GeV & 8867925.34 & 19.96 & 10.44 \\
+Jet $\eta$ < 2.1 & 8725240.129 & 98.39 & 10.27 \\
+>=1 gluon tag & 6416596.753 & 73.54 & 7.55 \\
+2 gluon tag & 1987243.577 & 30.97 & 2.34 \\
 \hline\hline
-|y*|<0.8 & 5.69899e+07 & 67.1027 & 67.088 \\
-$m_{jj}$>1200 GeV & 9.22742e+06 & 16.1913 & 10.8625 \\
-Jet $\eta$ < 2.1 & 8.95815e+06 & 97.0818 & 10.5455 \\
->=1 gluon tag & 6.52901e+06 & 72.8834 & 7.6859 \\
-2 gluon tag & 2.00016e+06 & 30.635 & 2.35458 \\
+|y*|<0.8 & 56986191.61 & 67.10 & 67.09 \\
+$m_{jj}$>1200 GeV & 9226826.65 & 16.19 & 10.86 \\
+Jet $\eta$ < 2.1 & 8957573.656 & 97.08 & 10.55 \\
+>=1 gluon tag & 6528587.528 & 72.88 & 7.69 \\
+2 gluon tag & 2000034.59 & 30.64 & 2.35 \\
 \hline
 \end{tabular}
 \end{center}
@@ -378,20 +378,20 @@ Jet $\eta$ < 2.1 & 8.95815e+06 & 97.0818 & 10.5455 \\
 Selection criteria & $N_{events}$ & Relative & Cummulative  \\
  & & percentage & percentage \\
 \hline
-Trigger HLT j420 & 1.31843e+08 &  &  \\
-$|\Delta\phi|$>1. & 1.31815e+08 & 99.9788 & 99.9788 \\
+Trigger HLT j420 & 105310345 &  &  \\
+$|\Delta\phi|$>1. & 105287974 & 99.98 & 99.98 \\
 \hline\hline
-|y*|<0.6 & 6.85116e+07 & 51.9755 & 51.9645 \\
-$m_{jj}$>1100 GeV & 1.35211e+07 & 19.7355 & 10.2555 \\
-Jet $|\eta|$ < 2.1 & 1.33012e+07 & 98.3734 & 10.0887 \\
->=1 gluon tag & 9.76368e+06 & 73.4045 & 7.40553 \\
-2 gluon tag & 3.02879e+06 & 31.021 & 2.29727 \\
+|y*|<0.6 & 54725400.72 & 51.98 & 51.97 \\
+$m_{jj}$>1100 GeV & 10808280.04 & 19.75 & 10.26 \\
+Jet $\eta$ < 2.1 & 10632611.66 & 98.37 & 10.10 \\
+>=1 gluon tag & 7805004.656 & 73.41 & 7.41 \\
+2 gluon tag & 2421292.836 & 31.02 & 2.30 \\
 \hline\hline
-|y*|<0.8 & 8.78827e+07 & 66.6712 & 66.6571 \\
-$m_{jj}$>1200 GeV & 1.40406e+07 & 15.9766 & 10.6495 \\
-Jet $\eta$ < 2.1 & 1.36355e+07 & 97.1142 & 10.3422 \\
->=1 gluon tag & 9.91873e+06 & 72.7422 & 7.52313 \\
-2 gluon tag & 3.04108e+06 & 30.66 & 2.30659 \\
+|y*|<0.6 & 70198325.9 & 66.67 & 66.66 \\
+$m_{jj}$>1100 GeV & 11225324.82 & 15.99 & 10.66 \\
+Jet $\eta$ < 2.1 & 10901679.77 & 97.12 & 10.35 \\
+>=1 gluon tag & 7930374.975 & 72.74 & 7.53 \\
+2 gluon tag & 2431579.742 & 30.66 & 2.31 \\
 \hline
 \end{tabular}
 \end{center}
@@ -406,20 +406,20 @@ Jet $\eta$ < 2.1 & 1.36355e+07 & 97.1142 & 10.3422 \\
 Selection criteria & $N_{events}$ & Relative & Cummulative  \\
  & & percentage & percentage \\
 \hline
-Trigger HLT j420 & 2.26484e+08 &  &  \\
-$|\Delta\phi|$>1. & 2.26435e+08 & 99.9782 & 99.9782 \\
+Trigger HLT j420 & 138772257.1 &  &  \\
+$|\Delta\phi|$>1. & 138742146.1 & 99.98 & 99.98 \\
 \hline\hline
-|y*|<0.6 & 1.17758e+08 & 52.0055 & 51.9942 \\
-$m_{jj}$>1100 GeV & 2.35254e+07 & 19.9777 & 10.3872 \\
-Jet $|\eta|$ < 2.1 & 2.31488e+07 & 98.399 & 10.2209 \\
->=1 gluon tag & 1.69391e+07 & 73.1748 & 7.47915 \\
-2 gluon tag & 5.2111e+06 & 30.7638 & 2.30087 \\
+|y*|<0.6 & 72128199.81 & 51.99 & 51.98 \\
+$m_{jj}$>1100 GeV & 14268833.88 & 19.78 & 10.28 \\
+Jet $\eta$ < 2.1 & 14037795.86 & 98.38 & 10.12 \\
+>=1 gluon tag & 10268893.46 & 73.15 & 7.40 \\
+2 gluon tag & 3157340.046 & 30.75 & 2.28 \\
 \hline\hline
-|y*|<0.8 & 1.51061e+08 & 66.7131 & 66.6985 \\
-$m_{jj}$>1200 GeV & 2.44998e+07 & 16.2184 & 10.8175 \\
-Jet $\eta$ < 2.1 & 2.37994e+07 & 97.1409 & 10.5082 \\
->=1 gluon tag & 1.72531e+07 & 72.4939 & 7.61779 \\
-2 gluon tag & 5.24156e+06 & 30.3805 & 2.31432 \\
+|y*|<0.8 & 92531998.24 & 66.69 & 66.68 \\
+$m_{jj}$>1200 GeV & 14826236.35 & 16.02 & 10.68 \\
+Jet $\eta$ < 2.1 & 14396812.36 & 97.10 & 10.37 \\
+>=1 gluon tag & 10432479.71 & 72.46 & 7.52 \\
+2 gluon tag & 3167160.011 & 30.36 & 2.28 \\
 \hline
 \end{tabular}
 \end{center}
