added appendix for pseudodata

--- a/include/appendix.tex
+++ b/include/appendix.tex
@@ -20,9 +20,15 @@
 
 % adding trigger studies
 \input{include/triggerturnon.tex}
+\clearpage
+
+% pseudodata generation
+\input{include/pseudodata.tex}
+\clearpage
 
 % BumpHunter Algorithm
 %\input{include/bumphunter.tex}
 
 % Global Fit Studies Vs SWiFt
 \input{include/app-GlobalFitStudies.tex}
+\clearpage
